# 25-qubit-quantum-computer-simulation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DOCUMENTATION.md  LICENSE  QUICKSTART.md  README.md  my_circuit.py  requirements.txt  setup.py
examples/: run_grover.py  run_shor.py
include/: constants.hpp  cuda_utils.hpp  gate_kernels.cuh  quantum_engine.cuh
q_sim/: __init__.py  circuit.py
q_sim/algorithms/: __init__.py  grovers.py  qft.py  shors.py  utils.py
src/: bindings.cpp  gate_kernels.cu  quantum_engine.cu
tests/: test_algorithms.py  test_gpu_kernels.cu
